Drop legacy keys for m_runOnDiscreteGpuBool

We shouldn't write X-KDE-RunOnDiscreteGpu anymore,
Prefer PrefersNonDefaultGPU following the upstream spec.

It was already half-broken anyway.
BUG: 481538